
syntax = "proto3";



package user_info;


// import "user.proto";
import "verifyCode.proto";
import "user_register.proto";
import "reply_server.proto";


option go_package = "github.com/shaineminkyaw/grpc_lab/user_info/pb";




service UserService {
    rpc CreateUser(UserRequest) returns (UserResponse) {};
    rpc GetCode(VerifyCodeRequest) returns (CodeResponse) {};
    rpc FilterUserFromLoginserver(AllIDRequest) returns (stream AllIDResponse) {};
}